--- a/_vti_pvt/structure.cnf
+++ b/_vti_pvt/structure.cnf
@@ -1,10 +1,13 @@
 3.0.0.507
-1006
-1000,index.html,0,index.htm,0,1571648895,1
+1008
+1000,index.html,0,Bj2002,0,1571662092,1
+vti_globalpage:BW|true
+1007,Photo.htm,0,新建网页 1,0,1571662171,1
 vti_globalpage:BW|true
 1001,sid:1001,0,Links,0,1571658573,2
 vti_globalpage:BW|true
 vti_navsequence:BW|true
+1006,Music.htm,0,新建网页 1,1000,1571662144,0
 1002,Aboutme.htm,0,关于我,1001,1571658573,0
 1003,Music.htm,0,来点音乐,1001,1571658573,0
 1005,Photo.htm,0,Dear My Friends,1001,1571658803,0
