--- a/_vti_pvt/structure.cnf
+++ b/_vti_pvt/structure.cnf
@@ -1,13 +1,4 @@
 3.0.0.507
-1010
-1000,index.html,0,Bj2002,0,1571662092,1
+1001
+1000,index.html,0,index.htm,0,1613053282,1
 vti_globalpage:BW|true
-1007,Friends.htm,0,新建网页 1,0,1571744003,1
-vti_globalpage:BW|true
-1001,sid:1001,0,Links,0,1571658573,2
-vti_globalpage:BW|true
-vti_navsequence:BW|true
-1006,Music.htm,0,新建网页 1,1000,1571662144,0
-1009,index.html,0,Bj2002,1001,1571745917,0
-1003,Music.htm,0,来点音乐,1001,1571658573,0
-1005,Friends.htm,0,Dear My Friends,1001,1571744003,0
